--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -5,7 +5,12 @@
 <title>Joric's Maps</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<link rel="icon" href="data:;base64,iVBORw0KGgo=">
+<meta property="og:image" content="https://i.imgur.com/TWf6Ptf.jpeg" />
+<meta property="og:site_name" content="Joric" />
+<meta property="og:type" content="object" />
+<meta property="og:title" content="Joric's Fallout London" />
+<meta property="og:description" content="Interactive Map" />
+<link rel="icon" href="data:,">
 
 <link rel="stylesheet" href="main.css">
 
