--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Joric's Maps</title>
+<title>Joric's Fallout London Interactive Map</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta property="og:image" content="https://i.imgur.com/TWf6Ptf.jpeg" />
