--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <meta property="og:image" content="https://img.youtube.com/vi/7fkqMHoESr8/hqdefault.jpg" />
 <meta property="og:site_name" content="Joric" />
 <meta property="og:type" content="object" />
-<meta property="og:title" content="Joric's Supraland 3D" />
+<meta property="og:title" content="Joric's Maps" />
 <meta property="og:description" content="Interactive Map" />
 <link rel="icon" href="data:,">
 </head>
