--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -735,8 +735,7 @@ window.onload = function(event) {
   function filterMarker(o, text) {
     if (text=='') return true;
     if (o.area != mapId) return false;
-
-    for (s of [o.name, o.editor_id, o.type]) {
+    for (s of [o.name, o.form_id, o.type]) {
       if (s && s.toLowerCase().includes(text.toLowerCase()))
         return true;
     }
