smaller og:image

--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -5,7 +5,7 @@
 <title>Joric's Fallout London Interactive Map</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta property="og:image" content="https://i.imgur.com/TWf6Ptf.jpeg" />
+<meta property="og:image" content="https://i.imgur.com/6XIQcPx.jpeg" />
 <meta property="og:site_name" content="Joric" />
 <meta property="og:type" content="object" />
 <meta property="og:title" content="Joric's Fallout London" />
