added all submaps

--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -131,7 +131,11 @@ let submaps = {
     'CoventGardenWorldSpace': { scale: 1, offset: {x:1500, y:-2000} },
     'BromleyGladesWorld': { scale: 1, offset: {x:0, y:0} },
     'StPaulsWorld': { scale: 1, offset: {x:3000, y:0} },
-    //'WestminsterWorld' : { scale: 0.6, offset: {x:-104300, y:28300}, rotation: 0.54 }, // still kind of skewed
+    'WestminsterWorld' : { scale: 0.6, offset: {x:-104300, y:27900}, rotation: 0.57 },
+    'CamdenWorld': { scale: 1, offset: {x:-79000, y:74000}, rotation: 0 },
+    'IslingtonWorld': { scale: 0.95, offset: {x:-26600, y:66500}, rotation: 0.57 },
+    'HackneyWorld': { scale: 0.95, offset: {x:19100, y:44000}, rotation: 0.78 },
+    'BankofEnglandWorld': { scale: 1, offset: {x:-32000, y:35500} },
   },
 };
 
