--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -741,7 +741,7 @@ window.onload = function(event) {
 
   function filterMarker(o, text) {
     if (text=='') return true;
-    if (o.area != mapId && !(submaps[mapId] && submaps[mapId][o.area])) return false;
+    if (o.area != mapId && !(maps[mapId].regions && maps[mapId].regions[o.area])) return false;
     if (!o.name || !o.type || !o.form_id) return false;
     text = text.toLowerCase();
     context = (o.name||'') +' '+ (o.type||'') +' '+ (o.form_id||'') +' '+humanReadable(o.type);
