--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -676,7 +676,7 @@ window.onload = function(event) {
     KeyW:['y',+1],KeyS:['y',-1],
     KeyQ:['b',+1],KeyE:['b',-1],
     KeyT:['z',+1],KeyG:['z',-1],
-    KeyX:['p',+1],KeyZ:['p',-1],
+    KeyZ:['p',+1],KeyX:['p',-1],
   };
 
   function update(timestep) {
