--- a/fallout-london/index.html
+++ b/fallout-london/index.html
@@ -751,7 +751,7 @@ window.onload = function(event) {
     if (o.area != mapId && !(maps[mapId].regions && maps[mapId].regions[o.area])) return false;
     if (!o.name || !o.type || !o.form_id) return false;
     text = text.toLowerCase();
-    context = (o.name||'') +' '+ (o.type||'') +' '+ ' '+humanReadable(o.type);
+    context = [o.name,o.type,humanReadable(o.type),o.editor_id].map(s=>s?s:'').join('|');
 
     if (context.toLowerCase().includes(text) || o.form_id==text ) {
       return true;
